/*
 * $Id: ChangeLog,v 1.1889 2003/12/18 00:42:05 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2003-12-18 07:41 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/itemapi.c
    * remove un-needed routine to copy double number to a string which
      may cause slowness in applications.

2003-12-17 15:52 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Fixed compilation of <> in #directives.

  * source/rtl/console.c
    + Added OutputDebugString() in hb_conOutErr() if under Windows.

  * source/vm/estack.c
    * Minor formatting.

2003-12-17 15:40 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/tobject.prg
    % Optimize and reformatted code.
    %! Fix and optimize TAssociativeArray_GetKeyPos().

2003-12-16 19:52 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/genc.c
  * source/compiler/harbour.c
    ! Fixed INIT/EXIT Procedures to be more Clipper compatible
      Don't conflict with other symbols of same name, and use $ as suffix like in Clipper.

2003-12-16 12:15 UTC+1200 Peter Rees <peter@rees.co.nz>
  * source/vm/mainwin.c
    *fixed to make sure terminating '\0' is on final parameter

2003-12-15 14:41 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  + source/codepage/CDPHR1250.C
  + source/codepage/CDPHR852.C
  + source/lang/MSGHR1250.C
    + Added new files contributed by Vladimir Miholic [mailto:Vladimir.Miholic@sk.hinet.hr]

  * source/lang/msghr852.c
    Update contributed by Vladimir Miholic [mailto:Vladimir.Miholic@sk.hinet.hr]

  * hrbdll.bc
  * makefile.bc
    + Added support for new hr1250 language and hr852 and hr1250 codepage files.

2003-12-16 08:43 UTC+1200 Peter Rees <peter@rees.co.nz>
  *  restored 4 changelog entries below

2003-12-15 15:24 UTC+1200 Peter Rees <peter@rees.co.nz>
  * source/vm/mainwin.c